<resources>
    <string name="app_name">Almats Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="name_of_film_star">Avengers: </string>
    <string name="name_of_film_end">End Game</string>
    <string name="pg">13+</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="name_of_storyline">Storyline</string>
    <string name="storyline">After the devastating events of Avengers:
        Infinity War, the universe is in ruins. With the help of remaining allies,
        the Avengers assemble once more in order to reverse
        Thanos actions and restore balance to the universe.</string>
    <string name="first_per">Robert Downey Jr.</string>
    <string name="second_per">Chris  Evans</string>
    <string name="third_per">Mark  Ruffalo</string>
    <string name="fourth_per">Chris Hemsworth</string>
    <string name="reviews">125 Reviews</string>
    <string name="name_movies">Avengers: End Game</string>
    <string name="last_of_movie">147 min</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>