<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:id="@+id/iv_cardView"
    cardview:cardCornerRadius="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_ground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/movie"
                android:foreground="@drawable/gradient_img"
                cardview:layout_constraintBottom_toBottomOf="parent"
                cardview:layout_constraintEnd_toEndOf="parent"
                cardview:layout_constraintHorizontal_bias="0.0"
                cardview:layout_constraintStart_toStartOf="parent"
                cardview:layout_constraintTop_toTopOf="parent"
                cardview:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/background_pg"
                android:layout_width="25dp"
                android:layout_height="0dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="65dp"
                android:src="@drawable/rectangle"
                cardview:layout_constraintEnd_toEndOf="@+id/ivPoster"
                cardview:layout_constraintHorizontal_bias="0.047"
                cardview:layout_constraintStart_toStartOf="parent"
                cardview:layout_constraintTop_toTopOf="parent"
                cardview:layout_constraintVertical_bias="0.03" />

            <TextView
                android:id="@+id/tvAgeRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="13+"
                android:textColor="@color/white"
                android:textStyle="bold"
                cardview:layout_constraintBottom_toBottomOf="parent"
                cardview:layout_constraintEnd_toEndOf="parent"
                cardview:layout_constraintHorizontal_bias="0.049"
                cardview:layout_constraintStart_toStartOf="@+id/ivPoster"
                cardview:layout_constraintTop_toTopOf="@+id/ivPoster"
                cardview:layout_constraintVertical_bias="0.035" />

            <TextView
                android:id="@+id/tvGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag"
                android:textColor="@color/content_color"
                android:textSize="10dp"
                cardview:layout_constraintBottom_toBottomOf="parent"
                cardview:layout_constraintEnd_toEndOf="parent"
                cardview:layout_constraintHorizontal_bias="0.142"
                cardview:layout_constraintStart_toStartOf="@+id/ivPoster"
                cardview:layout_constraintTop_toTopOf="@+id/ivPoster"
                cardview:layout_constraintVertical_bias="0.887" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/content_color"
                android:rating="4"
                android:stepSize="0.5"
                cardview:layout_constraintBottom_toBottomOf="parent"
                cardview:layout_constraintEnd_toEndOf="parent"
                cardview:layout_constraintHorizontal_bias="0.081"
                cardview:layout_constraintStart_toStartOf="parent"
                cardview:layout_constraintTop_toTopOf="@+id/ivPoster"
                cardview:layout_constraintVertical_bias="0.956" />

            <TextView
                android:id="@+id/tvReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                android:textColor="@color/review_color"
                android:textSize="10sp"
                android:textStyle="bold"
                cardview:layout_constraintBottom_toBottomOf="@+id/ivPoster"
                cardview:layout_constraintEnd_toEndOf="parent"
                cardview:layout_constraintHorizontal_bias="0.304"
                cardview:layout_constraintStart_toEndOf="@+id/ratingBar"
                cardview:layout_constraintTop_toTopOf="@+id/ivPoster"
                cardview:layout_constraintVertical_bias="0.956" />

            <ImageView
                android:id="@+id/ivIsLiked"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_baseline_favorite_24"
                cardview:layout_constraintBottom_toBottomOf="parent"
                cardview:layout_constraintEnd_toEndOf="parent"
                cardview:layout_constraintHorizontal_bias="0.891"
                cardview:layout_constraintStart_toStartOf="parent"
                cardview:layout_constraintTop_toTopOf="@+id/ivPoster"
                cardview:layout_constraintVertical_bias="0.039" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:gravity="left"
            android:textSize="12sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:text="@string/name_movies"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"
            android:text="@string/last_of_movie"
            android:textColor="#9A9696"
            android:textSize="10sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>